# trash-cpi

./: Anchor.toml  package-lock.json  package.json
programs/asd/: Cargo.toml
programs/asd-puppet/: Cargo.toml
programs/asd-puppet/src/: lib.rs
programs/asd/src/: lib.rs
tests/: asd.ts
